Revert "Pass over queue and testing"
This reverts commit 51076418a74e31e3ae1e7569d00d999beedabaae.